# wtf_licensing

./: .gitignore  Dockerfile  LICENSE  LICENSE_DATA_README.md  README.md  build.sh  docker-compose-dev.yml  docker-compose.yml  example_usage.py  generate_license_data.py  main.py  pyproject.toml  verify_self_referencing_fix.py
.github/ISSUE_TEMPLATE/: report-license-relationship-problem.md
original/: Generate-LicenseData-Simple.ps1
src/: __init__.py
src/routers/: route_tags.py
src/routers/api/: api_router.py  licensing_api.py
src/services/: __init__.py  license_data_service.py  task_manager.py
tests/: Product names and service plan identifiers for licensing.csv
