[project]
name = "wtf-licensing"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "aiofiles>=25.1.0",
    "aiohttp>=3.13.2",
    "apscheduler>=3.11.1",
    "fastapi[standard]>=0.125.0",
    "ruff>=0.14.9",
    "sqlmodel>=0.0.27",
]
